@schedule_modal ajax success

--- a/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
@@ -185,7 +185,9 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
         'query_value': query_value,
       },
       success: function (response) {
-        console.log(response);
+        var patient_list_div = $('#replaceable-content');
+        console.log(response)
+        patient_list_div.html(response);
       },
       error: function (xhr, status, error) {
         console.log("error");
