@xdsoft_datetimepicker - date format corrected. Update id_end

--- a/fullcalendar_1st/scheduler/templates/scheduler/patient_list_partial.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/patient_list_partial.html
@@ -9,6 +9,7 @@
 {% endif %}
 
 <script type="text/javascript">
+  // on click, populate patient details on form
   $('.patient_result').each(function() {
     $(this).on('click', function() {
       var patient_data = JSON.parse(this.dataset.patient);
