--- a/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
@@ -93,6 +93,8 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
           var start = moment( $('#id_start').attr('info') );
           var end = start.add( duration, 'minutes' );
 
+          $('#id_service').attr('info', duration);
+
           var end_el = $('#id_end');
           end_el.val( end.format('DD-MM-YYYY HH:mm') );
           end_el.attr('info', end.toISOString());
@@ -105,16 +107,6 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
       });
     }
   })
-
-  // $('#id_start').change( function() {
-  //   var newEventStart = moment(dp);
-  //   SMM.setScheduleEventStart(newEventStart);
-  //   SMM.setAllStartFields();
-  // });
-
-  // $('#id_end').change( function() {
-  //   SMM.updateStart();
-  // });
 
 </script>
 
@@ -141,6 +133,7 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
   var lookupPatient = function(qb, v) {
     var query_basis = qb;
     var query_value = v;
+    console.log(query_value)
 
     $.ajax({
       type: 'GET',
@@ -150,8 +143,7 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
         'query_value': query_value,
       },
       success: function (response) {
-        var patient_list_div = $('#replaceable-content');
-        patient_list_div.html(response);
+        $('#replaceable-content').html(response);
       },
       error: function (xhr, status, error) {
         console.log("error");
