@views.admin_schedule - Appointments working

--- a/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
+++ b/fullcalendar_1st/scheduler/templates/scheduler/schedule_modal.html
@@ -104,6 +104,7 @@ https://www.fusionbox.com/blog/detail/creating-conditionally-required-fields-in-
       'last_name': appointment_form.find('#id_last_name').val(),
       'email_address': appointment_form.find('#id_email_address').val(),
       'phone_number': appointment_form.find('#id_phone_number').val(),
+      'patient_id': appointment_form.find('#id_patient_id').val(),
       'form_type': appointment_form.find('#id_form_type').val(),
     }
 
